[package]
name = "orml-tokens-runtime-api"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"
license = "Apache-2.0"
description = "Runtime API module for orml-tokens."

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.2.1" }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.2.1" }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", default-features = false , branch = "release-polkadot-v1.2.1" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"sp-api/std",
	"sp-runtime/std",
]
